[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-guardrails"
version = "1.0.0"
description = "A lightweight plug-and-play guardrail framework for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
keywords = ["ai", "agents", "guardrails", "llm", "safety"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent_guardrails*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

